 =======================================================================
 ==CHANGES.txt
 =======================================================================

Gora Change Log

* GORA-290 StatefulHashMap removes the entry when put with same value (Alparslan Avci via hsaputra)

* GORA-231 Provide better error handling in AccumuloStore.readMapping when file does not exist (Apostolos Giannakidis)

* GORA-283 Specify field name for types not being considered in gora-cassandra (lewismc)

* GORA-285 Change logging at o.a.g.mapreduce.GoraRecordWriter from INFO to WARN (lewismc)

* GORA-117 gora hbase does not have a mechanism to set the caching on a scanner, which makes for poor performance on map/reduce jobs (alfonsonishikawa)

* GORA-281 More flexible file locations for cassandra's config and log4j (Nate McCall via hsaputra)

* GORA-275 Update Gora stores to pass conf when creating instance of PartitionQueryImpl (Damien Raude-Morvan via hsaputra)

* GORA-270 IOUtils static SerializationFactory field (Damien Raude-Morvan via hsaputra)

* GORA-268 Make GoraCompiler the main manifest attribute in gora-core (Apostolos Giannakidis via lewismc)

* GORA-265 Support for dynamic file extensions when traversing a directory (Apostolos Giannakidis via lewismc)

* GORA-264 Make generated data beans more java doc friendly (Apostolos Giannakidis via lewismc)

* GORA-222 upgrade jackson version to 1.6.9 (rherget via lewismc)

* GORA-232 DataStoreTestBase should delegate all functionality to DataStoreTestUtil (Apostolos Giannakidis via lewismc)

* GORA-259 Removal of the main methods from the test case classes (Apostolos via hsaputra)

* GORA-229 Use @Ignore for unimplemented functionality to identify absent tests (Apostolos Giannakidis via lewismc)

* GORA-258 writeCapacUnits gets value from wrong attribute (Apostolos Giannakidis via lewismc)

* GORA-256 Add Solr store to gora-tutorial (Scott Stults via lewismc)

* GORA-9 Implement a Solr-based store (ab, lewismc, Scott Stults)
